fixed gallery modal img not centered

--- a/src/css/gallery.styl
+++ b/src/css/gallery.styl
@@ -33,7 +33,7 @@
       .modal-dialog
         transform-vender(translate(0, 5%))
         max-width unset
-        width 85%
+        margin 10%
         boxShadow()
       .modal-content
         border unset
@@ -79,6 +79,9 @@
   .hover-img-container img,
   .modal-content img
     pointer-events none
+
+// @media only screen and (max-width: 575px)
+//   left
 
 @media only screen and (max-width: 767px)
   .hover-img-container .description
